# sql-python-model-dal

./: .gitignore  README.md  pyproject.toml
archive/: decorator_poc.py
db_dal/src/: db_dal.py
db_dal/tests/: test_db_dal.py
examples/: person_dal.py  person_sqlmodel_fails_on_unsupported_type_example.py  pydantic_db_model_example.py
pydantic_db_model/: pydantic_db_model.py
pydantic_db_model/fix_missing_timezone/: fix_missing_timezone.py
pydantic_db_model/pydantic_to_flat/src/: convert.py  create_flat_model.py
pydantic_db_model/pydantic_to_flat/tests/: test_pydantic_to_flat.py
pydantic_db_model/src/: pydantic_db_model.py
pydantic_db_model/src/fix_missing_timezone/: fix_missing_timezone.py
pydantic_db_model/src/pydantic_to_flat/src/: convert.py  create_flat_model.py
pydantic_db_model/src/pydantic_to_flat/tests/: test_pydantic_to_flat.py
pydantic_db_model/tests/: test_pydantic_db_model.py
pydantic_to_flat/src/: convert.py  create_flat_model.py  generate_flat_fields_definition.py
pydantic_to_flat/tests/: test_pydantic_to_flat.py
sql_dal/src/: db_engine.py  generate_db_model.py  sql_dal.py
sql_dal/tests/: test_sql_dal.py
